Starting injection assembly setup

--- a/Expenses/Info.plist
+++ b/Expenses/Info.plist
@@ -36,5 +36,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>TyphoonInitialAssemblies</key>
+	<array>
+		<string>ExpensesAssembly</string>
+	</array>
 </dict>
 </plist>
